# IGA_Soliton

./: CMakeLists.txt  README.txt  Settings.h
IGA_1D/: 1_Spline_Code.cpp  2_Quadrature_Data.cpp  3_Linear_Assembly.cpp  4_Approximation_Error.cpp  5_Visualization_Data.cpp  IGA_1D.h
KuramotoSivashinsky/: 1_XML_Parsing.cpp  2_Global_Assembly.cpp  3_Time_Integration.cpp  4_Simulation_Error.cpp  KuramotoSivashinsky.h  Main_File.cpp  TEST.xml
